# mutil_videosource_sdk

./: README.md
proj.windows/: CMakeLists.txt  README.md  common.cmake  compile-windows.bat  gen-vs2013-mvrtc.bat  mvrtc-build-sdk-windows-x86-release.bat
proj.windows/common/: CMakeLists.txt  common.cpp  common.h
proj.windows/mutilvideomanager/: CMakeLists.txt  mutilvideomanager.cpp
proj.windows/test/: CMakeLists.txt  test.cpp
proj.windows/transfer/: CMakeLists.txt  transfer.cpp
proj.windows/videosource/: CMakeLists.txt  videosource.cpp
src/system/win32/: agoramvrtc.def  agoramvsdk.rc  dllmain.cpp  resource.h
